--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Natasha G</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div class="container">
@@ -33,7 +34,7 @@
     <div class="menu">
      <ul>
         <li> Lançamentos</li>
-        <li>Sale de Verão</li>
+        <li> <a href="./saledeverao.html"> Sale de Verão </a></li>
         <li>Biquínis</li>
         <li>Saídas de Praia</li>
         <li>Maiôs</li>
@@ -48,8 +49,11 @@
     </header>
 
  <main>
-    
-    <img class="banner" src="./fotos/banner.jpg" alt="Imagem de Promoção">
+    <div class="carrossel">
+      <div class="container2" id="imgcarrossel">
+    <img class="banner" src="./fotos/carrossel1.jpg" alt="Imagem de Promoção">
+   </div>
+   </div>
 
 <div class="infobar">
  <ul>
@@ -59,7 +63,7 @@
  </ul>
 </div>
 
- <img  class="fotografia" src="./fotos/mulheres.jpg" alt="fotografia">
+
 
  <div class="tamanhos">
   <h2> Compre por Tamanho</h2>
